[package]
name = "solana-registry-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.17"
solana-client = "1.17"
solana-program = "1.17"
borsh = { version = "1.5.3", features = ["derive"] }
# borsh = { version = "0.10.3", features = ["derive"] }
mpl-token-metadata = "5.1.0"
spl-token = "4.0"
anyhow = "1.0"
borsh-derive = "0.10.3"


