[package]
name = "solana-registry-client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.1.7"
solana-client = "2.1.7"
# solana-program = "2.1.6"
borsh = { version = "1.5.3", features = ["derive"] }
# borsh = { version = "0.10.3", features = ["derive"] }
mpl-token-metadata = "5.1.0"
spl-token = "4.0.0"
anyhow = "1.0"
# borsh-derive = "0.10.3"


